Fix alignment of printer-friendly page link

--- a/app/assets/stylesheets/views/travel-advice.scss
+++ b/app/assets/stylesheets/views/travel-advice.scss
@@ -9,6 +9,9 @@
       padding: 0;
       margin: 0;
     }
+  }
 
+  .meta-data .print-link {
+    margin: 1em 0;
   }
 }
